fix(tooltip glyphicon): tooltip misaligned with glyphicon.

--- a/app/ui/src/scss/utils/_overrides.scss
+++ b/app/ui/src/scss/utils/_overrides.scss
@@ -154,3 +154,8 @@ body.cards-pf {
     }
   }
 }
+
+// Tooltip styling override
+.glyphicon-info-sign {
+  display: block;
+}
